Fixing resizing offset issues + font selector

--- a/Web/app/components/designer/_preview.html
+++ b/Web/app/components/designer/_preview.html
@@ -4,7 +4,7 @@
 			<div class="back">
 				<img ng-src="assets/img/card_background.png"/>
 			</div>
-			<div class="front">
+			<div class="front" id="card">
 				<img ng-src="{{preview}}" class="centered">
 			</div>
 	  </div>
@@ -13,7 +13,7 @@
 		  <div class="back">
 				<img ng-src="assets/img/shirt_background.png"/>
 			</div>
-			<div class="front">
+			<div class="front" id="shirt">
 				<img ng-src="{{preview}}" class="centered">
 			</div>
 		</div>
@@ -22,7 +22,7 @@
 	  	<div class="back">
 				<img ng-src="assets/img/iphone_background.png"/>
 			</div>
-			<div class="front">
+			<div class="front" id="mobile">
 				<img ng-src="{{preview}}" class="centered">
 			</div>
 		</div>
@@ -31,13 +31,13 @@
 	  	<div class="back">
 				<img ng-src="assets/img/computer_background.png"/>
 			</div>
-			<div class="front">
+			<div class="front" id="computer">
 				<img ng-src="{{preview}}" class="centered">
 			</div>
 		</div>
 
 		<div class="item">
-	  	<div class="back">
+	  	<div class="back" id="mug">
 				<img ng-src="assets/img/mug_background.png"/>
 			</div>
 			<div class="front">
