--- a/Web/app/components/shared/header/headerView.html
+++ b/Web/app/components/shared/header/headerView.html
@@ -13,9 +13,9 @@
       <li class="pricing"><a href="javascript:void(0)">Free trial</a></li>
       <li><a href="javascript:void(0)">About</a></li>
       <li><a href="javascript:void(0)">Login</a></li>
-      <li class="contact">
+      <!--<li class="contact">
         <a href="#"><i class="glyphicon glyphicon-comment" aria-label="send a message" aria-hidden="true"></i></a>
-      </li>
+      </li>-->
     </ul>
   </div><!-- /.navbar-collapse -->
 
