--- a/Web/assets/css/bootstrap-overrides.css
+++ b/Web/assets/css/bootstrap-overrides.css
@@ -91,7 +91,7 @@ input, input:focus{
 
 select{
   border: none !important;
-  color: #000 !important;
+  color: #63584F !important;
   padding: 0 !important;
   box-shadow: none !important;
   -webkit-box-shadow: none !important;
