Centering CSS elements

--- a/Web/app/components/shared/header/headerView.html
+++ b/Web/app/components/shared/header/headerView.html
@@ -2,16 +2,17 @@
     <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
 
-    <a class="navbar-brand" href="#/designer">Compose your logo</a>
+    <!--<a class="navbar-brand" href="#/designer">Compose your logo</a>-->
   </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
+      <li><a href="javascript:void(0)">Home</a></li>
       <li><a href="javascript:void(0)">How it works</a></li>
-      <li><a href="javascript:void(0)">Pricing</a></li>
-      <li class="pricing"><a href="javascript:void(0)">Free trial</a></li>
-      <li><a href="javascript:void(0)">About</a></li>
+      <li><a href="javascript:void(0)">Showcase</a></li>
+      <li><a href="javascript:void(0)">Directory</a></li>
+      <li><a href="javascript:void(0)">Communicator</a></li>
       <li><a href="javascript:void(0)">Login</a></li>
       <!--<li class="contact">
         <a href="#"><i class="glyphicon glyphicon-comment" aria-label="send a message" aria-hidden="true"></i></a>
