--- a/Web/assets/css/app.css
+++ b/Web/assets/css/app.css
@@ -58,7 +58,7 @@
   box-shadow: 2px 1px 2px 0px rgba(0, 0, 0, 0.52);
 }
 .sidebar header{
-  padding-top: 20px;
+  padding-top: 12px;
   text-align: center;
   height: 60px;
   border-bottom: 1px solid #ccc;
@@ -122,7 +122,7 @@
   height: 40px;
   font-size: 14px;
   font-weight: 800;
-  margin-top: 10px;
+  margin-top: 1vh;
   border-radius: 5px;
   float: right;
   text-transform: uppercase;
