Centering button and fixing preview padding

--- a/Web/app/components/shared/header/headerView.html
+++ b/Web/app/components/shared/header/headerView.html
@@ -8,11 +8,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="javascript:void(0)">Home</a></li>
-      <li><a href="javascript:void(0)">How it works</a></li>
-      <li><a href="javascript:void(0)">Showcase</a></li>
-      <li><a href="javascript:void(0)">Directory</a></li>
-      <li><a href="javascript:void(0)">Communicator</a></li>
+      <li><a href="http://www.exentriq.com/">Home</a></li>
+      <li><a href="http://www.exentriq.com/howitworks">How it works</a></li>
+      <li><a href="http://showcase.exentriq.com/">Showcase</a></li>
+      <li><a href="http://www.exentriq.com/directory">Directory</a></li>
+      <li><a href="http://www.exentriq.com/manager">Communicator</a></li>
       <li><a href="javascript:void(0)">Login</a></li>
       <!--<li class="contact">
         <a href="#"><i class="glyphicon glyphicon-comment" aria-label="send a message" aria-hidden="true"></i></a>
